fix:train对接 lesson样式

--- a/src/pages/lesson/lesson.html
+++ b/src/pages/lesson/lesson.html
@@ -114,6 +114,16 @@
     .bgcWhite {
         background-color: #fff;
     }
+    
+    #getAllClassById h3 {
+        font-size: 0.35rem;
+    }
+    
+    #getAllClassById .tag-item {
+        font-size: 0.25rem;
+        padding-top: 0.1rem;
+        color: rgb(117, 115, 115);
+    }
 </style>
 <div class="bui-page home-page">
     <!-- <header class="bui-bar">
@@ -149,34 +159,7 @@
             </main>
         </div>
         <div id="getAllClassById">
-            <!-- <div class="bui-box activity-box">
-                <div class="pic-box tip-box">
-                    <img src="http://www.easybui.com/demo/images/banner02.png">
-                    <span class="tip">专题</span>
-                </div>
-                <div class="span1">
-                    <h3 class="activity-title">2021年载货汽车课程第一期 </h3>
-                    <div class="tags">
-                        <span class="tag-item">载货汽车</span>
-                        <span class="tag-item">2021</span>
-                    </div>
-                    <div class="activity-time"><i class="icon icon-time"></i>02-01 15:51</div>
-                </div>
-            </div>
-            <div class="bui-box activity-box">
-                <div class="pic-box tip-box">
-                    <img src="http://www.easybui.com/demo/images/banner02.png">
-                    <span class="tip">专题</span>
-                </div>
-                <div class="span1">
-                    <h3 class="activity-title">2021年公交车课程第四期 </h3>
-                    <div class="tags">
-                        <span class="tag-item">公交车</span>
-                        <span class="tag-item">2021</span>
-                    </div>
-                    <div class="activity-time"><i class="icon icon-time"></i>02-08 16:00</div>
-                </div>
-            </div> -->
+            <!-- class栏 -->
         </div>
     </main>
     <footer>
