--- a/src/pages/train_page1/train_page1.html
+++ b/src/pages/train_page1/train_page1.html
@@ -84,7 +84,7 @@
     }
     
     .coupon-list .item-right .bui-btn {
-        display: inline-block;
+        /* display: inline-block; */
         margin-top: .15rem;
         min-width: inherit
     }
