feat: 开发者信息

--- a/src/pages/software/software.html
+++ b/src/pages/software/software.html
@@ -11,9 +11,43 @@
         </div>
     </header>
     <main>
-        <div style="padding: 10px;">
-            当前软件版本: 0.9.2
-        </div>
+
+        <dl id="accordion" class="bui-accordion">
+            <dt class="bui-btn bui-box">
+                <div class="span1">软件信息</div>
+                <i class="icon-accordion"></i>
+            </dt>
+            <dd style="padding: 15px;">
+                当前软件版本: 0.9.2
+            </dd>
+            <dt class="bui-btn bui-box">
+                <div class="span1">开发者信息</div>
+                <i class="icon-accordion"></i>
+            </dt>
+            <dd style="padding: 15px;">
+                <h3>软件架构：</h3>
+                <a href="https://lab.since88.cn/since">Since · 大大</a><br><br>
+                <h3>服务端：</h3>
+                <a href="http://gresstant.com">Since · 氪氪</a>、
+                <a href="https://lab.since88.cn/pursuing">Since · 憨憨</a>、
+                <a href="https://lab.since88.cn/zry">Since · AA</a>、<br>
+                <a href="http://xxznzhs.top">Since · 柒柒</a>、<a href="https://lab.since88.cn/Merlin">Since · 岩岩</a><br><br>
+                <h3>管理端：</h3>
+                <a href="https://lab.since88.cn/qwangry">Since · RR</a>、
+                <a href="https://lab.since88.cn/cc-wangxin2020">Since · CC</a><br><br>
+                <h3>用户端：</h3>
+                <a href="https://lab.since88.cn/bdwmyyzyqb">Since · 岁岁</a>、
+                <a href="https://lab.since88.cn/Jing-111">Since · 静静</a>、
+                <a href="https://lab.since88.cn/lixixi">Since · 真真</a>
+            </dd>
+            <dt class="bui-btn bui-box">
+                <div class="span1">错误反馈</div>
+                <i class="icon-accordion"></i>
+            </dt>
+            <dd style="padding: 15px;">
+                如在使用中遇到问题，请联系since2014@qq.com
+            </dd>
+        </dl>
     </main>
     <footer>
 
