注册页面bug修复

--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -23,7 +23,7 @@
             <li class="bui-btn bui-box clearactive">
                 <label class="bui-label" for="phonenumber">身份证号:</label>
                 <div class="span1">
-                    <div class="bui-input user-input">
+                    <div class="bui-input user-idcard">
                         <input id="phone" type="text" b-model="page.idcard" value="" placeholder="请输入您的身份证号">
                     </div>
                 </div>
@@ -31,7 +31,7 @@
             <li class="bui-btn bui-box clearactive">
                 <label class="bui-label" for="phonenumber">手机号:</label>
                 <div class="span1">
-                    <div class="bui-input user-input">
+                    <div class="bui-input user-phone">
                         <input id="phone" type="number" b-model="page.phone" value="" placeholder="请输入手机号">
                     </div>
                 </div>
