--- a/src/index.html
+++ b/src/index.html
@@ -19,8 +19,10 @@
     <script src="js/bui.js"></script>
     <script src="js/video.min.js"></script>
     <script src="js/videojs-landscape-fullscreen.min.js"></script>
+    <script src="js/common.js"></script>
     <!-- 初始化单页 -->
     <script src="index.js"></script>
+    
 </body>
 
 </html>
