--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,8 @@
     <script src="js/common.js"></script>
     <!-- 初始化单页 -->
     <script src="index.js"></script>
-    
+    <script src="http://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/FileSaver.js/2.0.4/FileSaver.min.js"></script>
 </body>
 
 </html>
