增加证书导出功能

--- a/src/index.html
+++ b/src/index.html
@@ -21,9 +21,10 @@
     <script src="js/videojs-landscape-fullscreen.min.js"></script>
     <script src="js/common.js"></script>
     <!-- 初始化单页 -->
+    <script src="js/FileSaver.js"></script>
     <script src="index.js"></script>
     <script src="http://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
-    <script src="https://cdn.bootcdn.net/ajax/libs/FileSaver.js/2.0.4/FileSaver.min.js"></script>
+    
 </body>
 
 </html>
