数据加载问题

--- a/src/pages/software/software.html
+++ b/src/pages/software/software.html
@@ -18,7 +18,7 @@
                 <i class="icon-accordion"></i>
             </dt>
             <dd style="padding: 15px;">
-                当前软件版本: 0.9.3
+                当前软件版本: 1.0.1
             </dd>
             <dt class="bui-btn bui-box">
                 <div class="span1">开发者信息</div>
@@ -48,9 +48,9 @@
                 如在使用中遇到问题，请联系since2014@qq.com
             </dd>
         </dl>
-        <video style="width: 100%;" controls webkit-playsinline="true" playsinline="true" x5-playsinline>
+        <!-- <video style="width: 100%;" controls webkit-playsinline="true" playsinline="true" x5-playsinline>
             <source src="https://since-util.oss-cn-beijing.aliyuncs.com/sunflower/a9a4fc2d196c5719ef339ea99c1a8fcd.mp4" type="video/mp4">
-        </video>
+        </video> -->
     </main>
     <footer>
 
