--- a/src/pages/software/software.html
+++ b/src/pages/software/software.html
@@ -48,6 +48,10 @@
                 如在使用中遇到问题，请联系since2014@qq.com
             </dd>
         </dl>
+        <video controls="" x5-playsinline="" playsinline="" webkit-playsinline="" poster="" x-webkit-airplay="allow" preload="auto">
+            <source src="https://since-util.oss-cn-beijing.aliyuncs.com/sunflower/a9a4fc2d196c5719ef339ea99c1a8fcd.mp4" type="video/mp4">
+        </video>
+
         <!-- <video style="width: 100%;" controls webkit-playsinline="true" playsinline="true" x5-playsinline>
             <source src="https://since-util.oss-cn-beijing.aliyuncs.com/sunflower/a9a4fc2d196c5719ef339ea99c1a8fcd.mp4" type="video/mp4">
         </video> -->
