--- a/src/pages/software/software.html
+++ b/src/pages/software/software.html
@@ -48,7 +48,7 @@
                 如在使用中遇到问题，请联系since2014@qq.com
             </dd>
         </dl>
-        <video controls="" x5-playsinline="" playsinline="" webkit-playsinline="" poster="" x-webkit-airplay="allow" preload="auto">
+        <video controls="" x5-playsinline="" playsinline="" webkit-playsinline="" poster="" x-webkit-airplay="allow" width="100%" preload="auto">
             <source src="https://since-util.oss-cn-beijing.aliyuncs.com/sunflower/a9a4fc2d196c5719ef339ea99c1a8fcd.mp4" type="video/mp4">
         </video>
 
