--- a/src/pages/software/software.html
+++ b/src/pages/software/software.html
@@ -1,4 +1,53 @@
-=
+<div>
+    <header>
+        <div class="bui-bar">
+            <div class="bui-bar-left">
+                <a class="bui-btn" onclick="bui.back();"><i class="icon-back"></i></a>
+            </div>
+            <div class="bui-bar-main">版本说明</div>
+            <div class="bui-bar-right">
+                <!-- 右边按钮 -->
+            </div>
+        </div>
+    </header>
+    <main>
+
+        <dl id="accordion" class="bui-accordion">
+            <dt class="bui-btn bui-box">
+                <div class="span1">软件信息</div>
+                <i class="icon-accordion"></i>
+            </dt>
+            <dd style="padding: 15px;">
+                当前软件版本: 1.1.2
+            </dd>
+            <dt class="bui-btn bui-box">
+                <div class="span1">开发者信息</div>
+                <i class="icon-accordion"></i>
+            </dt>
+            <dd style="padding: 15px;">
+                <h3>软件架构：</h3>
+                <a href="https://lab.since88.cn/since">Since · 大大</a><br><br>
+                <h3>服务端：</h3>
+                <a href="http://gresstant.com">Since · 氪氪</a>、
+                <a href="https://lab.since88.cn/pursuing">Since · 憨憨</a>、
+                <a href="https://lab.since88.cn/zry">Since · AA</a>、<br>
+                <a href="http://xxznzhs.top">Since · 柒柒</a>、<a href="https://lab.since88.cn/Merlin">Since · 岩岩</a><br><br>
+                <h3>管理端：</h3>
+                <a href="https://lab.since88.cn/qwangry">Since · RR</a>、
+                <a href="https://lab.since88.cn/cc-wangxin2020">Since · CC</a><br><br>
+                <h3>用户端：</h3>
+                <a href="https://lab.since88.cn/bdwmyyzyqb">Since · 岁岁</a>、
+                <a href="https://lab.since88.cn/Jing-111">Since · 静静</a>、
+                <a href="https://lab.since88.cn/lixixi">Since · 真真</a>
+            </dd>
+            <dt class="bui-btn bui-box">
+                <div class="span1">错误反馈</div>
+                <i class="icon-accordion"></i>
+            </dt>
+            <dd style="padding: 15px;">
+                如在使用中遇到问题，请联系since2014@qq.com
+            </dd>
+
         </dl>
         <!-- <video controls="" x5-playsinline="" playsinline="" webkit-playsinline="" poster="" x-webkit-airplay="allow" width="100%" preload="auto">
             <source src="https://since-util.oss-cn-beijing.aliyuncs.com/sunflower/a9a4fc2d196c5719ef339ea99c1a8fcd.mp4" type="video/mp4">
