--- a/src/pages/main/main.html
+++ b/src/pages/main/main.html
@@ -41,9 +41,9 @@
         <div id="tabDynamic" class="bui-tab">
             <div class="bui-tab-main">
                 <ul>
-                    <li>
-                        <!-- 课程tab -->
-                    </li>
+                    <!-- <li>
+                        
+                    </li> -->
                     <li>
                         <!-- 任务tab -->
                     </li>
@@ -63,10 +63,10 @@
     </main>
     <footer>
         <ul id="tabDynamicNav" class="bui-nav main-footer">
-            <li class="bui-btn bui-box-vertical" href="pages/lesson/lesson.html">
+            <!-- <li class="bui-btn bui-box-vertical" href="pages/lesson/lesson.html">
                 <i class="icon-weixin">&#xe678;</i>
                 <div class="span1">课程</div>
-            </li>
+            </li> -->
             <li class="bui-btn bui-box-vertical" href="pages/task/task.html">
                 <i class="icon-weixin">&#xe665;</i>
                 <div class="span1">任务</div>
